# kuzu_nif

./: .gitignore  README.md  mix.exs  seed.py
lib/: kuzu_nif.ex
native/kuzu_ex/: Cargo.toml  README.md
native/kuzu_ex/src/: example_kuzu_result_with_NodeVal_and_RelVal.txt  lib.rs
priv/: seed.exs
test/: kuzu_nif_test.exs
