[package]
name = "kuzu_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "kuzu_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { version = "43.0.0" }
kuzu = { version = "0.6.0", features = ["arrow"] }
rustler = "0.34.0"
polars-arrow = { version = "0.43.1", features = ["arrow_rs"] }
arrow-schema = { version = "43.0.0" }

[dependencies.polars]
version = "0.43.1"
